<resources>
    <string name="app_name">Second hand trade</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="hint_email">이메일주소</string>
    <string name="hint_password">비밀번호</string>
    <string name="login_with">Sign-in with</string>

    <string name="facebook_app_id">481428673497606</string>
    <string name="fb_login_protocol_scheme">fb481428673497606</string>
    <string name="facebook_client_token">f9e36b7489c5157a46b26731a58f7b8e</string>

    <string name="home">홈</string>
    <string name="chat">채팅</string>
    <string name="my_info">내정보</string>
    <string name="trade">중고거래</string>

    <string name="input_user_name">사용하실 닉네임을 입력해주세요!</string>
    <string name="save">저장</string>
    <string name="upload_my_item">내물건 올리기</string>
    <string name="item_detail">물건 상세 설명</string>
    <string name="price">가격</string>
    <string name="item_name">물건명</string>
    <string name="img_upload">이미지 업로드</string>
    <string name="sign_out">로그아웃</string>
    <string name="email">이메일</string>
    <string name="name">이름</string>
    <string name="password_update">비밀번호 변경</string>
    <string name="upload">등록하기</string>
    <string name="chatting">채팅하기</string>
    <string name="item_deatil_info">물건 상세정보</string>
    <string name="seller">판매자</string>
    <string name="send">전송</string>
</resources>